--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,98 @@
-# local package
+alabaster==0.7.12
+argon2-cffi==20.1.0
+async-generator==1.10
+attrs==21.2.0
+awscli==1.19.88
+Babel==2.9.1
+backcall==0.2.0
+bleach==3.3.0
+botocore==1.20.88
+certifi==2021.5.30
+cffi==1.14.5
+chardet==4.0.0
+click==8.0.1
+cloudpickle==1.6.0
+colorama==0.4.3
+coverage==5.5
+dask==2021.6.0
+decorator==5.0.9
+defusedxml==0.7.1
+docutils==0.15.2
+entrypoints==0.3
+flake8==3.9.2
+fsspec==2021.5.0
+idna==2.10
+imagesize==1.2.0
+ipykernel==5.5.5
+ipython==7.24.1
+ipython-genutils==0.2.0
+ipywidgets==7.6.3
+jedi==0.18.0
+Jinja2==3.0.1
+jmespath==0.10.0
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==6.1.12
+jupyter-console==6.4.0
+jupyter-core==4.7.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+locket==0.2.1
+MarkupSafe==2.0.1
+matplotlib-inline==0.1.2
+mccabe==0.6.1
+mistune==0.8.4
+nbclient==0.5.3
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.1
+notebook==6.4.0
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+pandocfilters==1.4.3
+parso==0.8.2
+partd==1.2.0
+pexpect==4.8.0
+pickleshare==0.7.5
+prometheus-client==0.11.0
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pycodestyle==2.7.0
+pycparser==2.20
+pyflakes==2.3.1
+Pygments==2.9.0
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+python-dotenv==0.17.1
+pytz==2021.1
+PyYAML==5.4.1
+pyzmq==22.1.0
+qtconsole==5.1.0
+QtPy==1.9.0
+requests==2.25.1
+rsa==4.7.2
+s3transfer==0.4.2
+Send2Trash==1.5.0
+six==1.16.0
+snowballstemmer==2.1.0
+Sphinx==4.0.2
+sphinxcontrib-applehelp==1.0.2
+sphinxcontrib-devhelp==1.0.2
+sphinxcontrib-htmlhelp==2.0.0
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.3
+sphinxcontrib-serializinghtml==1.1.5
 -e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+terminado==0.10.0
+testpath==0.5.0
+toolz==0.11.1
+tornado==6.1
+tqdm==4.61.0
+traitlets==5.0.5
+urllib3==1.26.5
+wcwidth==0.2.5
+webencodings==0.5.1
+widgetsnbextension==3.5.1
